--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: @project.artifactId@
+    name: eureka
 
 server:
   port: 8761
@@ -10,7 +10,7 @@ eureka:
     hostname: localhost
   client:
     serviceUrl:
-      defaultZone: http://192.168.16.20:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
     registerWithEureka: false
     fetchRegistry: false
   server:
