--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ eureka:
     hostname: docker.for.mac.host.internal
   client:
     serviceUrl:
-      defaultZone: http://docker.for.mac.host.internal:8761/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
     registerWithEureka: false
     fetchRegistry: false
   server:
