--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,13 @@ server:
 
 eureka:
   instance:
-    hostname: docker.for.mac.host.internal
+    hostname: 192.168.16.1
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:8761/eureka/
+      defaultZone: http://192.168.16.1:8761/eureka/
     registerWithEureka: false
     fetchRegistry: false
   server:
     enableSelfPreservation: false
+    response-cache-update-interval-ms: 3000
+    response-cache-auto-expiration-in-seconds: 180
