--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,8 @@
 spring:
   application:
-    name: eureka
-
+    name: common-eureka
 server:
   port: 8761
-
 eureka:
   instance:
     hostname: 192.168.236.8
