--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,10 +5,10 @@ spring:
     name: common-eureka
 eureka:
   instance:
-    hostname: 172.16.138.245
+    hostname: localhost
   client:
     serviceUrl:
-      defaultZone: http://172.16.138.245:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
     registerWithEureka: false
     fetchRegistry: false
   server:
